adding papers and updating home page

--- a/leili.bib
+++ b/leili.bib
@@ -8,63 +8,68 @@
   month     = dec,
 }
 
-@InProceedings{zhao2019what,
-  author    = {Zhao, Zhichen and Li, Lei and Zhang, Bowen and Jiang, Yuning and Xu, Li and Wang, Meng and Ma, Weiying},
-  title     = {What You Look Matters: Offline Evaluation of Advertising Creatives for Cold Start Problem},
-  booktitle = {CIKM},
-  year      = {2019},
-  month     = nov,
-}
-
 @InProceedings{wang2019towards,
   author    = {Wang, Mingxuan and Xie, Jun and Tan, Zhixing and Su, Jinsong and Xiong, Deyi and Li, Lei},
-  title     = {Towards Linear Time Neural Machine Translation with Capsule Networks},
   booktitle = {EMNLP},
+  title     = {Towards Linear Time Neural Machine Translation with Capsule Networks},
   year      = {2019},
   month     = nov,
+  abstract  = {In this study, we first investigate a novel capsule network with dynamic routing for linear time Neural Machine Translation (NMT), referred as CAPSNMT. CAPSNMT uses an aggregation mechanism to map the source sentence into a matrix with pre-determined size, and then applys a deep LSTM network to decode the target sequence from the source representation. Unlike the previous work (Sutskever et al., 2014) to store the source sentence with a passive and bottom-up way, the dynamic routing policy encodes the source sentence with an iterative process to decide the credit attribution between nodes from lower and higher layers. CAPSNMT has two core properties: it runs in time that is linear in the length of the sequences and provides a more flexible way to aggregate the part-whole information of the source sentence. On WMT14 English-German task and a larger WMT14 English-French task, CAPSNMT achieves comparable results with the Transformer system. We also devise new hybrid architectures intended to combine the strength of CAPSNMT and the RNMT model. Our hybrid models obtain state-of-the-arts results on both benchmark datasets. To the best of our knowledge, this is the first work that capsule networks have been empirically inves- tigated for sequence to sequence problems},
+}
+
+@InProceedings{zhao2019what,
+  author    = {Zhao, Zhichen and Li, Lei and Zhang, Bowen and Jiang, Yuning and Xu, Li and Wang, Meng and Ma, Weiying},
+  booktitle = {The 28th ACM International Conference on Information and Knowledge Management (CIKM)},
+  title     = {What You Look Matters: Offline Evaluation of Advertising Creatives for Cold Start Problem},
+  year      = {2019},
+  month     = nov,
+  abstract  = {Modern online-auction-based advertising systems utilize user and item features to automatically place ads. In order to train a model to rank the most profitable ads, new ad creatives have to be placed online for hours to receive sufficient user-click data. This corresponds to the cold-start stage. Random strategy lead to inefficiency and inferior selections of potential ads. In this paper, we analyze the effectiveness of content-based selection during the cold-start stage. Specifically, we propose Pre Evaluation of Ad Creative Model (PEAC), a novel method to evaluate and select ad creatives offline before being placed online. Our proposed PEAC utilizes the automatically extracted deep feature from ad content to predict and rank their potential online placement performance. It does not rely on any user-click data, which is scarce during the cold-starting phase. A large-scale system based on our method has been deployed in a real online advertising platform. The online A/B testing shows the ads system with PEAC pre-ranking obtains significant improvement in revenue gain compared to the prior system. Furthermore, we provide detailed analyses on what the model learned, which gives further suggestions to improve ad creative design.},
 }
 
 @InProceedings{fu2019rethinking,
   author    = {Fu, Yao and Zhou, Hao and Chen, Jiaze and Li, Lei},
-  title     = {Rethinking Text Attribute Transfer: A Lexical Analysis},
   booktitle = {12th International Conference on Natural Language Generation (INLG)},
+  title     = {Rethinking Text Attribute Transfer: A Lexical Analysis},
   year      = {2019},
   month     = oct,
+  abstract  = {Text attribute transfer is modifying certain linguistic attributes (e.g. sentiment, style, authorship, etc.) of a sentence and transforming them from one type to another. In this paper, we aim to analyze and interpret what is changed during the transfer process. We start from the observation that in many existing models and datasets, certain words within a sentence play important roles in determining the sentence attribute class. These words are referred to as the Pivot Words. Based on these pivot words, we propose a lexical analysis framework, the Pivot Analysis, to quantitatively analyze the effects of these words in text attribute classification and transfer. We apply this framework to existing datasets and models, and show that: (1) the pivot words are strong features for the classification of sentence attributes; (2) to change the attribute of a sentence, many datasets only requires to change certain pivot words; (3) consequently, many transfer models only perform the lexical-level modification, while leaving higher-level sentence structures unchanged. Our work provides an in-depth understanding of linguistic attribute transfer and further identifies the future requirements and challenges of this task.},
 }
 
 @InProceedings{jiang2019svd,
   author    = {Jiang, Qing-Yuan and He, Yi and Li, Gen and Lin, Jian and Li, Lei and Li., Wu-Jun},
+  booktitle = {International Conference on Computer Vision (ICCV)},
   title     = {{SVD}: A Large-Scale Short Video Dataset for Near Duplicate Video Retrieval.},
-  booktitle = {ICCV},
   year      = {2019},
   month     = oct,
+  abstract  = {With the explosive growth of video data in real applications, near-duplicate video retrieval (NDVR) has become indispensable and challenging, especially for short videos. However, all existing NDVR datasets are introduced for long videos. Furthermore, most of them are small-scale and lack of diversity due to the high cost of collecting and labeling near-duplicate videos. In this paper, we introduce a large-scale short video dataset, called SVD, for the NDVR task. SVD contains over 500,000 short videos and over 30,000 labeled videos of near-duplicates. We use multiple video mining techniques to construct positive/negative pairs. Furthermore, we design temporal and spatial transformations to mimic user-attack behavior in real applications for constructing more difficult variants of SVD. Experiments show that existing state-of-the-art NDVR methods, including real-value based and hashing based methods, fail to achieve satisfactory performance on this challenging dataset. The release of SVD dataset will foster research and system engineering in the NDVR area. The SVD dataset is available at https://svdbase.github.io.},
+  url       = {https://svdbase.github.io},
 }
 
 @InProceedings{wang2019vatex,
   author    = {Wang, Xin and Wu, Jiawei and Chen, Junkun and Li, Lei and Wang, Yuan-Fang and Wang, William Yang},
-  title     = {VATEX: A Large-Scale, High-Quality Multilingual Dataset for Video-and-Language Research},
-  booktitle = {ICCV},
+  booktitle = {International Conference on Computer Vision (ICCV)},
+  title     = {{VATEX}: A Large-Scale, High-Quality Multilingual Dataset for Video-and-Language Research},
   year      = {2019},
   month     = oct,
+  note      = {Oral Presentation},
   abstract  = {We present a new large-scale multilingual video description dataset, VATEX, which contains over 41,250 videos and 825,000 captions in both English and Chinese. Among the captions, there are over 206,000 English-Chinese parallel translation pairs. Compared to the widely-used MSR-VTT dataset, VATEX is multilingual, larger, linguistically complex, and more diverse in terms of both video and natural language descriptions. We also introduce two tasks for video-and-language research based on VATEX: (1) Multilingual Video Captioning, aimed at describing a video in various languages with a compact unified captioning model, and (2) Video-guided Machine Translation, to translate a source language description into the target language using the video information as additional spatiotemporal context. Extensive experiments on the VATEX dataset show that, first, the unified multilingual model can not only produce both English and Chinese descriptions for a video more efficiently, but also offer improved performance over the monolingual models. Furthermore, we demonstrate that the spatiotemporal video context can be effectively utilized to align source and target languages and thus assist machine translation. In the end, we discuss the potentials of using VATEX for other video-and-language research.},
-  file      = {Arxiv:https\:/arxiv.org/abs/1904.03493:URL},
   url       = {https://vatex.org/main/index.html},
 }
 
 @InProceedings{wen2019correct,
   author    = {Wen, Rongxiang and Zhou, Hao and Huang, Shujian and Xia, Yifan and Li, Lei and Chen, Jiajun},
-  title     = {Correct-and-Memorize: Learning to Translate from Interactive Revisions},
   booktitle = {IJCAI},
+  title     = {Correct-and-Memorize: Learning to Translate from Interactive Revisions},
   year      = {2019},
   month     = aug,
+  note      = {Oral Presentation},
   abstract  = {State-of-the-art machine translation models are stillnot on a par with human translators. Previous worktakes human interactions into the neural machine translation process to obtain improved results in target languages. However, not all model-translation errors are equal some are critical while others are minor. In the mean while, same translation mistakes occur repeatedly in similar context. To solve bothissues, we propose CAMIT, a novel method for translating in an interactive environment. Our proposed method works with critical revision instructions,therefore allows human to correct arbitrary words in model-translated sentences. In addition,CAMIT learns from and softly memorizes revision actions based on the context, alleviating the issue of repeating mistakes. Experiments in both ideal and real interactive translation settings demonstrate that our proposed CAMIT enhances machine translation results significantly while requires fewer revision instructions from human compared to previous methods.},
-  file      = {:pubs/weng-ijcai2019-imt.pdf:PDF},
 }
 
 @InProceedings{lu2019uncovering,
   author    = {Lu, Yunfei and Yu, Linyun and Cui, Peng and Zang, Chengxi and Xu, Renzhe and Liu, Yihao and Li, Lei and Zhu, Wenwu},
+  booktitle = {the 25th SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
   title     = {Uncovering the Co-driven Mechanism of Social and Content Links in User Churn Phenomena},
-  booktitle = {KDD},
   year      = {2019},
   address   = {New York, NY, USA},
   month     = aug,
@@ -77,18 +82,17 @@
 
 @InProceedings{bao2019generating,
   author    = {Bao, Yu and Zhou, Hao and Huang, Shujian and Li, Lei and Mou, Lili and Vechtomova, Olga and Dai, Xinyu and Chen, Jiajun},
+  booktitle = {the 57th Annual Meeting of the Association for Computational Linguistics (ACL)},
   title     = {Generating Sentences from Disentangled Syntactic and Semantic Spaces},
-  booktitle = {ACL},
   year      = {2019},
   month     = jul,
   abstract  = {Variational auto-encoders (VAEs) are widely used in natural language generation due to the regularization of the latent space. However, generating sentences from the continuous latent space does not explicitly model the syntactic information. In this paper, we propose to generate sentences from disentangled syntactic and semantic spaces. Our proposed method explicitly models syntactic information in the VAE’s latent space by using the linearized tree sequence, leading to better performance of language generation. Additionally, the advantage of sampling in the disentangled syntactic and semantic latent spaces enables us to perform novel applications, such as the unsupervised paraphrase generation and syntax-transfer generation. Experimental results show that our proposed model achieves similar or better performance in various tasks, compared with state-of-the-art related work.},
-  file      = {:pubs/bao-acl2019-dssvae.pdf:PDF},
 }
 
 @InProceedings{qiu2019dynamically,
   author    = {Qiu, Lin and Xiao, Yunxuan and Qu, Yanru and Zhou, Hao and Li, Lei and Zhang, Weinan and Yu, Yong},
+  booktitle = {the 57th Annual Meeting of the Association for Computational Linguistics (ACL)},
   title     = {Dynamically Fused Graph Network for Multi-hop Reasoning},
-  booktitle = {ACL},
   year      = {2019},
   month     = jul,
   abstract  = {Text-based question answering (TBQA) has been studied extensively in recent years. Most existing approaches focus on finding the answer to a question within a single paragraph. However, many difficult questions require multiple supporting evidence from scattered text across two or more documents. In this paper, we propose the Dynamically Fused Graph Network (DFGN), a novel method to answer those questions requiring multiple scattered evidence and reasoning over them. Inspired by human’s step-by-step reasoning behavior, DFGN includes a dynamic fusion layer that starts from the entities mentioned in the given query, explores along the entity graph dynamically built from the text, and gradually finds relevant supporting entities from the given documents. We evaluate DFGN on HotpotQA, a public TBQA dataset requiring multi-hop reasoning. DFGN achieves competitive results on the public board. Furthermore, our analy- sis shows DFGN could produce interpretable reasoning chains.},
@@ -97,8 +101,8 @@
 
 @InProceedings{zhang2019generating,
   author    = {Zhang, Huangzhao and Miao, Ning and Zhou, Hao and Li, Lei},
+  booktitle = {the 57th Annual Meeting of the Association for Computational Linguistics (ACL) - short papers},
   title     = {Generating Fluent Adversarial Examples for Natural Languages},
-  booktitle = {ACL (short paper)},
   year      = {2019},
   month     = jul,
   abstract  = {Efficiently building an adversarial attacker fornatural language processing (NLP) tasks is areal challenge. Firstly, as the sentence spaceis discrete, it is difficult to make small perturbations along the direction of gradients. Secondly,the fluency of the generated examples can not be guaranteed. In this paper, we propose MHA, which addresses both problemsby performing Metropolis-Hastings sampling,whose proposal is designed with the guidanceof gradients. Experiments on IMDB and SNLIshow that our proposed MHA outperforms thebaseline model on attacking capability. Adversarial training with MHA also leads to better robustness and performance.},
@@ -107,10 +111,11 @@
 
 @InProceedings{wu2019unified,
   author    = {Wu, Hao and Mao, Jiayuan and Zhang, Yufeng and Sun, Weiwei and Jiang, Yuning and Li, Lei and Ma, Wei-Ying},
-  title     = {Unified Visual-Semantic Embeddings: Bridging Vision and Language with Structured Meaning Representations},
   booktitle = {CVPR},
+  title     = {Unified Visual-Semantic Embeddings: Bridging Vision and Language with Structured Meaning Representations},
   year      = {2019},
   month     = jun,
+  note      = {Oral Presentation},
   abstract  = {We propose Unified Visual-Semantic Embeddings (VSE)
 for learning a joint space for scene representation and textual
 semantics. It unifies the embeddings of concepts at different
@@ -212,11 +217,11 @@ the proposed framework.},
 
 @InProceedings{wu2018reinforced,
   author    = {Wu, Jiawei and Li, Lei and Wang, William Yang},
-  title     = {Reinforced Co-Training},
   booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
+  title     = {Reinforced Co-Training},
   year      = {2018},
-  pages     = {1252--1262},
   month     = jun,
+  pages     = {1252--1262},
   publisher = {Association for Computational Linguistics},
   abstract  = {Co-training is a popular semi-supervised learning framework to utilize a
 large amount of unlabeled data in addition to a small labeled set. Co-training
@@ -231,7 +236,6 @@ selection policy with a small labeled dataset, and then exploits this policy to
 train the co-training classifiers automatically. Experimental results on
 clickbait detection and generic text classification tasks demonstrate that our
 proposed method can obtain more accurate text classification results.},
-  file      = {:pubs/wu2018reinforced - Reinforced Co-Training.pdf:PDF},
   location  = {New Orleans, Louisiana},
   timestamp = {2018-05-07T10:09:16.000+0200},
   url       = {http://arxiv.org/abs/1804.06035},
@@ -243,7 +247,7 @@ proposed method can obtain more accurate text classification results.},
   booktitle = {The Thirty-First AAAI Conference on Artificial Intelligence},
   year      = {2017},
   month     = jul,
-  note      = {The earlier version appeared in NIPS 2016 workshop on Advances in Approximate Bayesian Inference.},
+  comment      = {The earlier version appeared in NIPS 2016 workshop on Advances in Approximate Bayesian Inference.},
   abstract  = {Online joint parameter and state estimation is a core problem for temporal models. Most existing methods are either restricted to a particular class of models (e.g., the Storvik filter) or computationally expensive (e.g., particle MCMC). We propose a novel nearly-black-box algorithm, the Assumed Parameter Filter (APF), a hybrid of particle filtering for state variables and assumed density filtering for parameter variables. It has the following advantages: (a) it is online and computationally efficient; (b) it is applicable to both discrete and continuous parameter spaces with arbitrary transition dynamics. On a variety of toy and real models, APF generates more accurate results within a fixed computation budget compared to several standard algorithms from the literature.},
   file      = {:pubs/erol2017nearly - A Nearly-Black-Box Online Algorithm for Joint Parameter and State Estimation in Temporal Models.pdf:PDF;Appendix:pubs/erol-aaai2017-apf-appendix.pdf:PDF},
   owner     = {lilei.02},
@@ -252,14 +256,14 @@ proposed method can obtain more accurate text classification results.},
 
 @Article{matsubara2017non,
   author   = {Matsubara, Yasuko and Sakurai, Yasushi and Prakash, B. Aditya and Li, Lei and Faloutsos, Christos},
-  title    = {Non-linear Dynamics of Information Diffusion in Social Networks},
   journal  = {ACM Transactions on the Web},
+  title    = {Non-linear Dynamics of Information Diffusion in Social Networks},
   year     = {2017},
-  volume   = {11},
-  number   = {1},
   month    = feb,
-  note     = {The earlier version of the paper appeared in KDD'12. This version includes significant extension.},
+  number   = {1},
+  volume   = {11},
   abstract = {The recent explosion in the adoption of search engines and new media such as blogs and Twitter have facilitated the faster propagation of news and rumors. How quickly does a piece of news spread over these media? How does its popularity diminish over time? Does the rising and falling pattern follow a simple universal law? In this paper, we propose SPIKEM, a concise yet flexible analytical model of the rise and fall patterns of information diffusion. Our model has the following advantages: (a) unification power: it explains earlier empirical observations and generalizes theoretical models including the SI and SIR models. We provide the threshold of the take-off vs. die-out conditions for SPIKEM, and discuss the generality of our model, by applying it to an arbitrary graph topology; (b) practicality: it matches the observed behavior of diverse sets of real data; (c) parsimony: it requires only a handful of parameters; and (d) usefulness: it makes it possible to perform analytic tasks such as forecasting, spotting anomalies, and interpretation by reverse engineering the system parameters of interest (e.g. quality of news, number of interested bloggers, etc.). We also introduce an efficient and effective algorithm for the real-time monitoring of information diffusion, namely, SPIKESTREAM, which identifies multiple diffusion patterns in a large collection of online event streams. Extensive experiments on real datasets demonstrate that SPIKEM accurately and succinctly describes all the patterns of the rise-and-fall spikes in social networks.},
+  comment  = {The earlier version of the paper appeared in KDD'12. This version includes significant extension.},
   file     = {:pubs/matsubara2017non - Non-linear Dynamics of Information Diffusion in Social Networks.pdf:PDF},
 }
 
@@ -403,7 +407,7 @@ proposed method can obtain more accurate text classification results.},
   title     = {The Extended Parameter Filter},
   booktitle = {Proceedings of the 30th International Conference on Machine learning},
   year      = {2013},
-  note      = {The full version appeared as Tech. Rep. UCB/EECS-2013-48.},
+  comment      = {The full version appeared as Tech. Rep. UCB/EECS-2013-48.},
   abstract  = {The parameters of temporal models, such as dynamic Bayesian networks, may be modelled in a Bayesian context as static or atemporal variables that influence transition probabilities at every time step. Particle filters fail for models that include such variables, while methods that use Gibbs sampling of parameter variables may incur a per-sample cost that grows linearly with the length of the observation sequence. Storvik devised a method for incremental computation of exact sufficient statistics that, for some cases, reduces the per-sample cost to a constant. In this paper, we demonstrate a connection between Storvik's filter and a Kalman filter in parameter space and establish more general conditions under which Storvik's filter works. Drawing on an analogy to the extended Kalman filter, we develop and analyze, both theoretically and experimentally, a Taylor approximation to the parameter posterior that allows Storvik's method to be applied to a broader class of models. Our experiments on both synthetic examples and real applications show improvement over existing methods.},
   file      = {:pubs/erol2013extended - The Extended Parameter Filter.pdf:PDF},
   owner     = {leili},
@@ -499,7 +503,7 @@ proposed method can obtain more accurate text classification results.},
   title     = {Time Series Clustering: Complex is Simpler!},
   booktitle = {Proceedings of the 28th International Conference on Machine learning},
   year      = {2011},
-  note      = {Please see for updated and additional experiments in Chap 5 of the thesis "Fast algorithms for mining co-evolving time series".},
+  comment      = {Please see for updated and additional experiments in Chap 5 of the thesis "Fast algorithms for mining co-evolving time series".},
   file      = {:pubs/li2011time - Time Series Clustering_ Complex is Simpler!.pdf:PDF;Dataset1-mocap16:software/li2011time - Time Series Clustering_ Complex is Simpler!.zip:URL;Dataset2-mocap35:software/mocap35-rfoot_amc.zip:URL},
   location  = {Bellevue, Washington},
   numpages  = {8},
@@ -586,7 +590,7 @@ proposed method can obtain more accurate text classification results.},
   volume    = {E93.D},
   number    = {6},
   pages     = {1330--1342},
-  note      = {This one is applying the idea from Cut-And-Stitch paper from linear dynamical system to hidden markov models. The extended version can be found in my thesis Chapter 6 and 7.},
+  comment      = {This one is applying the idea from Cut-And-Stitch paper from linear dynamical system to hidden markov models. The extended version can be found in my thesis Chapter 6 and 7.},
   abstract  = {Quad-core cpus have been a common desktop configuration for today’s office. The increasing number of processors on a single chip opens new opportunity for parallel computing. Our goal is to make use of the multi-core as well as multi-processor architectures to speed up large-scale data mining algorithms. In this paper, we present a general par- allel learning framework, Cut-And-Stitch, for training hidden Markov chain models. Particularly, we propose two model-specific variants, CAS-LDS for learning linear dynamical systems (LDS) and CAS-HMM for learning hidden Markov models (HMM). Our main contribution is a novel method to handle the data dependencies due to the chain structure of hidden variables, so as to parallelize the EM-based parameter learning algorithm. We imple- ment CAS-LDS and CAS-HMM using OpenMP on two supercomputers and a quad-core commercial desktop. The experimental results show that parallel algorithms using Cut-And-Stitch achieve comparable accuracy and almost linear speedups over the traditional serial version.},
   file      = {:pubs/li2010efficient - Efficient Parallel Learning of Hidden Markov Chain Models on SMPs.pdf:PDF},
   owner     = {leili},
